--- a/styl/global.styl
+++ b/styl/global.styl
@@ -23,7 +23,6 @@ body {
 main {
   display: block;
   flex: 1 0 auto;
-  width: 100%;
   container();
   margin: 0 auto;
   padding-bottom: $gutter;
